--- a/mongodb-exp-crud/package.json
+++ b/mongodb-exp-crud/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.0",
     "express": "^5.2.1",
     "mongoose": "^9.1.2"
   }
